--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -77,7 +77,7 @@
   padding-left:25px;
   padding-right: 25px;
   padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 35px;
   min-height: 500px;
   height:auto;
   border:1px solid #000;
@@ -223,4 +223,52 @@
 
 .formBtn {
   width: 75px;
+}
+
+.testform {
+  padding-right: 15px;
+  width: 150px;
+}
+
+.radioAlign {
+  padding-top:7px;
+}
+
+.testform-input {
+  padding-top: 10px;
+  width: 200px;
+  padding-right: 15px;
+}
+
+.testform-inputBtn {
+  padding-top: 0px;
+  width: 200px;
+  padding-right: 35px;
+}
+
+.sectionGrid {
+ /* border:1px solid #000; */
+  width: 46%;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.radioChoiceWidth {
+  width: 20px;
+}
+
+.numChoiceWidth {
+  min-height: 20px;
+  width: 21px;
+  text-align: center;
+  background-color: #F4f4f4;
+  padding-left: 3px;
+  margin-right: 5px;
+  padding-bottom: 7px;
+  display: inline-block;
+  padding-top: 7px;
+  margin-bottom: 7px;
+  vertical-align: middle;
 }
